[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
py-cord = "^2.1.3"
discord = "^2.0.0"
aiosignal = "^1.2.0"
async-timeout = "^4.0.2"
attrs = "^22.1.0"
charset-normalizer = "^2.1.1"
frozenlist = "^1.3.1"
multidict = "^6.0.2"
yarl = "^1.8.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
